// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stakingEvents should filter by account 1`] = `
Object {
  "stakingEvents": Object {
    "__typename": "StakingEventsConnection",
    "nodes": Array [
      Object {
        "__typename": "StakingEvent",
        "amount": "1000000",
        "date": "2021-10-06T12:35:22",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": null,
        "stakingEventId": "Bonded",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "date": "2021-10-06T12:35:22.5",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": Array [
          "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        ],
        "stakingEventId": "Nominated",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": "100",
        "date": "2021-10-06T12:38:10",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": null,
        "stakingEventId": "Unbonded",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "date": "2021-10-06T12:38:10.5",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        ],
        "stakingEventId": "Nominated",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
    ],
    "totalCount": 4,
  },
}
`;

exports[`stakingEvents should return nomination events 1`] = `
Object {
  "stakingEvents": Object {
    "__typename": "StakingEventsConnection",
    "nodes": Array [
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "date": "2021-10-06T12:35:22.5",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": Array [
          "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        ],
        "stakingEventId": "Nominated",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "date": "2021-10-06T12:38:10.5",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        ],
        "stakingEventId": "Nominated",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
    ],
    "totalCount": 2,
  },
}
`;

exports[`stakingEvents should return staking events 1`] = `
Object {
  "stakingEvents": Object {
    "__typename": "StakingEventsConnection",
    "nodes": Array [
      Object {
        "__typename": "StakingEvent",
        "amount": "1000000",
        "date": "2021-10-06T12:34:02.5",
        "identityId": "0x686a05bf46a048e84adf81fb5ba45fbd01a77877ccfe2a638f0215976fafeafd",
        "nominatedValidators": null,
        "stakingEventId": "Bonded",
        "stashAccount": "0x58bde49478e69c60e80b6c80f10a78b8c360489cb445d535fd091a2c3dbfb56b",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": "1000000",
        "date": "2021-10-06T12:35:22",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": null,
        "stakingEventId": "Bonded",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "date": "2021-10-06T12:35:22.5",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": Array [
          "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        ],
        "stakingEventId": "Nominated",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": "76179499",
        "date": "2021-10-06T12:38:06",
        "identityId": "0x0400000000000000000000000000000000000000000000000000000000000000",
        "nominatedValidators": null,
        "stakingEventId": "Reward",
        "stashAccount": "0xfe65717dad0447d715f660a0a58411de509b42e6efb8375f562f58a554d5860e",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": "100",
        "date": "2021-10-06T12:38:10",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": null,
        "stakingEventId": "Unbonded",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "date": "2021-10-06T12:38:10.5",
        "identityId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "nominatedValidators": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        ],
        "stakingEventId": "Nominated",
        "stashAccount": "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
      },
    ],
    "totalCount": 6,
  },
}
`;
